--- a/main/style.css
+++ b/main/style.css
@@ -37,6 +37,7 @@ body {
 .navbar-center {
     display: flex;
     gap: 20px;
+    margin-left: 1000px;
 }
 
 .nav-btn {
@@ -44,10 +45,17 @@ body {
     background: #2c2c2c;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 0px;
     font-size: 15px;
     cursor: pointer;
     transition: background 0.3s ease;
+}
+
+.nav-buttons {
+    display: flex;
+    gap: 0px;
+    align-items: right;
+    justify-content: center;
 }
 
 .nav-btn:hover {
